--- a/cabal.project
+++ b/cabal.project
@@ -36,6 +36,9 @@ packages:
          ./plugins/hls-refactor-plugin
          /home/zubin/ghc-debug/stub/
          /home/zubin/ghc-debug/convention/
+         /home/zubin/ghc-debug/client/
+         /home/zubin/ghc-debug/common/
+         /home/zubin/ghc-debug/ghc-debug-brick/
 
 -- Standard location for temporary packages needed for particular environments
 -- For example it is used in the project gitlab mirror to help in the MAcOS M1 build script
