--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -415,7 +415,7 @@ executable haskell-language-server
     -- disable idle GC
     -- increase nursery size
     -- Enable collection of heap statistics
-    "-with-rtsopts=-I0 -N -A128M -T"
+    "-with-rtsopts=-I0 -A128M -T"
     -Wno-unticked-promoted-constructors
   if flag(pedantic)
     ghc-options: -Werror
