--- a/cabal.project
+++ b/cabal.project
@@ -34,6 +34,7 @@ packages:
          ./plugins/hls-gadt-plugin
          ./plugins/hls-explicit-fixity-plugin
          ./plugins/hls-refactor-plugin
+         ./plugins/hls-diagrams-plugin
 
 -- Standard location for temporary packages needed for particular environments
 -- For example it is used in the project gitlab mirror to help in the MAcOS M1 build script
