Simplify implementation of eval plugin and make it work with GHC 9.4
The plugin was implemented by calling "load" which circumvents all of
HLSs caching mechanisms for interface files and linkables. Instead we
should work like the other typechecking functions which get all the
stuff we need using HLS rules and setup the HscEnv with all the state in
the right places.

The key part to this is setting up all the HPT modules with linkables if
they are depenedencies of the module we are trying to run a function
from.

- ban load functions from GHC driver

- Enable CI for hls-eval-plugin and fix a bug due to clearing of mi_globals

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -208,6 +208,16 @@
   - name: "GHC.Arr.!"
     within: []
 
+  # We do not want to use functions from the
+  # GHC driver. Instead use hls rules to construct
+  # an appropriate GHC session
+  - name: "load"
+    within: []
+  - name: "load'"
+    within: []
+  - name: "loadWithCache"
+    within: []
+
   # Tracing functions
   # We ban an explicit list rather than the
   # Debug.Trace, because that module also
