--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -201,7 +201,7 @@ flag dynamic
   manual:      True
 
 common class
-  if flag(class) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
+  if flag(class)
     build-depends: hls-class-plugin ^>= 1.1
     cpp-options: -Dhls_class
 
@@ -271,7 +271,7 @@ common splice
     cpp-options: -Dhls_splice
 
 common alternateNumberFormat
-  if flag(alternateNumberFormat) 
+  if flag(alternateNumberFormat)
     build-depends: hls-alternate-number-format-plugin ^>= 1.2
     cpp-options: -Dhls_alternateNumberFormat
 
