--- a/plugins/hls-cabal-plugin/hls-cabal-plugin.cabal
+++ b/plugins/hls-cabal-plugin/hls-cabal-plugin.cabal
@@ -45,6 +45,7 @@ library
     -- This is a lot of work for almost zero benefit, so we just allow more versions here
     -- and we eventually completely drop support for building HLS with stack.
     , Cabal                 ^>=3.2 || ^>=3.4 || ^>=3.6 || ^>= 3.8
+    , Cabal-syntax          ^>= 3.6
     , deepseq
     , directory
     , extra                 >=1.7.4
@@ -58,6 +59,7 @@ library
     , stm
     , text
     , unordered-containers  >=0.2.10.0
+    , fuzzy                 >=0.1
 
   hs-source-dirs:   src
   default-language: Haskell2010
