--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,6 +90,16 @@ workflow:
     - x86_64-linux
   image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-alpine3_12:$DOCKER_REV"
 
+.x86_64-linux-mint19:
+  tags:
+    - x86_64-linux
+  image: "linuxmintd/mint19.3-amd64"
+
+.x86_64-linux-mint20:
+  tags:
+    - x86_64-linux
+  image: "linuxmintd/mint20.2-amd64"
+
 
 ######################
 # aarch64 linux deb10
@@ -266,6 +276,82 @@ test-x86_64-linux-centos7:
   needs: ["tar-x86_64-linux-centos7"]
   before_script:
     - sudo yum install -y tree
+
+###########################
+# x86_64 linux Mint19.3
+###########################
+
+build-x86_64-linux-mint19:
+  extends:
+    - .build
+    - .x86_64-linux-mint19
+  before_script:
+    - apt update
+    - apt install -y build-essential curl libffi-dev libffi6 libgmp-dev libgmp10 libncurses-dev libncurses5 libtinfo5 zlib1g-dev patchelf tree
+  variables:
+    ADD_CABAL_ARGS: "--enable-split-sections"
+
+tar-x86_64-linux-mint19:
+  extends:
+    - .artifacts
+    - .x86_64-linux-mint19
+  stage: tar
+  needs: ["build-x86_64-linux-mint19"]
+  script:
+    - ./.gitlab/tar.sh
+  variables:
+    TARBALL_ARCHIVE_SUFFIX: x86_64-mint19.3-linux
+    TARBALL_EXT: tar.xz
+  before_script:
+    - apt update
+    - apt install -y make tar xz-utils curl
+
+test-x86_64-linux-mint19:
+  extends:
+    - .test
+    - .x86_64-linux-mint19
+  needs: ["tar-x86_64-linux-mint19"]
+  before_script:
+    - apt update
+    - apt install -y tree patchelf make curl build-essential
+
+###########################
+# x86_64 linux Mint20
+###########################
+
+build-x86_64-linux-mint20:
+  extends:
+    - .build
+    - .x86_64-linux-mint20
+  before_script:
+    - apt update
+    - apt install -y build-essential curl libffi-dev libffi7 libgmp-dev libgmp10 libncurses-dev libncurses5 libtinfo5 zlib1g-dev patchelf tree
+  variables:
+    ADD_CABAL_ARGS: "--enable-split-sections"
+
+tar-x86_64-linux-mint20:
+  extends:
+    - .artifacts
+    - .x86_64-linux-mint20
+  stage: tar
+  needs: ["build-x86_64-linux-mint20"]
+  script:
+    - ./.gitlab/tar.sh
+  variables:
+    TARBALL_ARCHIVE_SUFFIX: x86_64-mint20.2-linux
+    TARBALL_EXT: tar.xz
+  before_script:
+    - apt update
+    - apt install -y make tar xz-utils curl
+
+test-x86_64-linux-mint20:
+  extends:
+    - .test
+    - .x86_64-linux-mint20
+  needs: ["tar-x86_64-linux-mint20"]
+  before_script:
+    - apt update
+    - apt install -y tree patchelf make curl build-essential
 
 ######################
 # x86_64 linux fedora33
