--- a/plugins/hls-cabal-plugin/hls-cabal-plugin.cabal
+++ b/plugins/hls-cabal-plugin/hls-cabal-plugin.cabal
@@ -38,6 +38,7 @@ library
     , ghcide                ^>= 1.8
     , hashable
     , hls-plugin-api        ^>=1.5
+    , hls-graph             ^>=1.8
     , lsp                   ^>=1.6.0.0
     , lsp-types             ^>=1.6.0.0
     , regex-tdfa            ^>=1.3.1
