--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -99,7 +99,7 @@ library
         unliftio-core,
         ghc-boot-th,
         ghc-boot,
-        ghc >= 8.6,
+        ghc >= 8.8,
         ghc-check >=0.5.0.8,
         ghc-paths,
         cryptohash-sha1 >=0.11.100 && <0.12,
@@ -363,7 +363,7 @@ test-suite ghcide-tests
         text,
         text-rope,
         unordered-containers,
-    if (impl(ghc >= 8.6) && impl(ghc < 9.2))
+    if impl(ghc < 9.2)
       build-depends:
           record-dot-preprocessor,
           record-hasfield
