--- a/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
+++ b/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
@@ -37,6 +37,7 @@ library
       , syb
       , transformers
       , ghc
+      , ghc-boot-th
       , unordered-containers
     hs-source-dirs:   src
     default-language: Haskell2010
