--- a/plugins/hls-retrie-plugin/hls-retrie-plugin.cabal
+++ b/plugins/hls-retrie-plugin/hls-retrie-plugin.cabal
@@ -31,6 +31,7 @@ library
     , ghcide                ^>=1.9
     , hashable
     , hls-plugin-api        ^>=1.6
+    , hls-refactor-plugin
     , lsp
     , lsp-types
     , retrie                >=0.1.1.0
@@ -46,3 +47,24 @@ library
     TypeOperators
 
   ghc-options:        -Wno-unticked-promoted-constructors
+
+test-suite tests
+  if impl(ghc >= 9.3)
+    buildable: False
+  else
+    buildable: True
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , aeson
+    , base
+    , containers
+    , filepath
+    , hls-plugin-api
+    , hls-refactor-plugin
+    , hls-retrie-plugin
+    , hls-test-utils             ^>=1.5
+    , text
