--- a/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
+++ b/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
@@ -38,6 +38,7 @@ library
       , transformers
       , ghc-boot-th
       , unordered-containers
+      , hw-fingertree
     hs-source-dirs:   src
     default-language: Haskell2010
 
