--- a/cabal.project
+++ b/cabal.project
@@ -20,6 +20,7 @@ packages:
          ./plugins/hls-refine-imports-plugin
          ./plugins/hls-hlint-plugin
          ./plugins/hls-rename-plugin
+         ./plugins/hls-latex-plugin
          ./plugins/hls-retrie-plugin
          ./plugins/hls-haddock-comments-plugin
          ./plugins/hls-splice-plugin
