--- a/cabal.project
+++ b/cabal.project
@@ -5,6 +5,7 @@ packages:
          ./hls-graph
          ./ghcide
          ./ghcide-bench
+         ./ghcide/ghcide-test-utils
          ./ghcide/test
          ./hls-plugin-api
          ./hls-test-utils
