--- a/stack.yaml
+++ b/stack.yaml
@@ -5,6 +5,7 @@ packages:
 - ./hie-compat
 - ./hls-graph
 - ./ghcide/
+- ./ghcide/ghcide-test-utils
 - ./ghcide/test
 - ./hls-plugin-api
 - ./hls-test-utils
