--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,8 @@ workflow:
   rules:
     - if: $CI_COMMIT_TAG
       when: always
+    - if: $CI_PIPELINE_SOURCE == "web"
+      when: always
     - when: never
 
 .artifacts:
