comment out build-tool-depends. then hls-fourmolu-plugin build succeeds with cabal v2-build

--- a/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
+++ b/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
@@ -49,8 +49,8 @@ test-suite tests
   hs-source-dirs:   test
   main-is:          Main.hs
   ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
-  build-tool-depends:
-    fourmolu:fourmolu
+  -- build-tool-depends:
+  --   fourmolu:fourmolu
   build-depends:
     , base
     , aeson
