--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,8 @@ variables:
       CABAL_PROJECT: cabal.project
     - GHC_VERSION: 9.2.4
       CABAL_PROJECT: cabal.project
+    - GHC_VERSION: 9.2.5
+      CABAL_PROJECT: cabal.project
     - GHC_VERSION: 9.4.2
       CABAL_PROJECT: cabal.project
     - GHC_VERSION: 9.4.3
