--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,8 @@ variables:
       CABAL_PROJECT: cabal.project
     - GHC_VERSION: 9.4.2
       CABAL_PROJECT: cabal.project
+    - GHC_VERSION: 9.4.3
+      CABAL_PROJECT: cabal.project
 
 workflow:
   rules:
