--- a/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
+++ b/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
@@ -42,7 +42,7 @@ library
     hs-source-dirs:   src
     default-language: Haskell2010
 
-test-suite hls-explicit-record-fields-plugin-test
+test-suite tests
     import:           warnings
     default-language: Haskell2010
     -- other-modules:
