Revert "alternateNumberFormat and explicitFixity don't build on GHC 9.4"
This reverts commit 4903092780031fb400b28f1e9ce696f1057855d8.

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -286,7 +286,7 @@ common splice
     cpp-options: -Dhls_splice
 
 common alternateNumberFormat
-  if flag(alternateNumberFormat) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
+  if flag(alternateNumberFormat)
     build-depends: hls-alternate-number-format-plugin ^>= 1.2
     cpp-options: -Dhls_alternateNumberFormat
 
@@ -311,7 +311,7 @@ common gadt
     cpp-options: -Dhls_gadt
 
 common explicitFixity
-  if flag(explicitFixity) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
+  if flag(explicitFixity)
     build-depends: hls-explicit-fixity-plugin ^>= 1.0
     cpp-options: -DexplicitFixity
 
