--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -32,6 +32,7 @@
 /plugins/hls-stylish-haskell-plugin @Ailrun
 /plugins/hls-tactics-plugin @isovector
 /plugins/hls-stan-plugin @uhbif19
+/plugins/hls-explicit-record-fields-plugin @ozkutuk
 
 # Benchmarking
 /shake-bench @pepeiborra
