--- a/hls-plugin-api/hls-plugin-api.cabal
+++ b/hls-plugin-api/hls-plugin-api.cabal
@@ -29,6 +29,7 @@ library
     Ide.Plugin.Config
     Ide.Plugin.ConfigUtils
     Ide.Plugin.Properties
+    Ide.Plugin.RangeMap
     Ide.PluginUtils
     Ide.Types
 
@@ -57,6 +58,7 @@ library
     , transformers
     , unordered-containers
     , megaparsec > 9
+    , hw-fingertree
 
   if os(windows)
     build-depends: Win32
@@ -94,3 +96,18 @@ test-suite tests
     , tasty-rerun
     , text
     , lsp-types
+
+benchmark rangemap-benchmark
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   bench
+  main-is:          Main.hs
+  ghc-options:      -threaded -Wall
+  build-depends:
+      base
+    , hls-plugin-api
+    , lsp-types
+    , criterion
+    , random
+    , random-fu
+    , deepseq
