Add test to ensure both filtering approaches are identical

--- a/hls-plugin-api/hls-plugin-api.cabal
+++ b/hls-plugin-api/hls-plugin-api.cabal
@@ -94,8 +94,10 @@ test-suite tests
     , tasty
     , tasty-hunit
     , tasty-rerun
+    , tasty-quickcheck
     , text
     , lsp-types
+    , containers
 
 benchmark rangemap-benchmark
   type:             exitcode-stdio-1.0
