--- a/plugins/hls-cabal-plugin/hls-cabal-plugin.cabal
+++ b/plugins/hls-cabal-plugin/hls-cabal-plugin.cabal
@@ -70,6 +70,7 @@ test-suite tests
   main-is:          Main.hs
   build-depends:
     , base
+    , bytestring
     , filepath
     , ghcide
     , hls-cabal-plugin
