--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -66,7 +66,7 @@ library
         hashable,
         hie-compat ^>= 0.3.0.0,
         hls-plugin-api ^>= 1.5,
-        implicit-hie >= 0.1.2.7 && < 0.1.3, -- workaround, until v0.1.3 is fixed
+        implicit-hie >= 0.1.2.7 && < 0.1.3,
         lens,
         list-t,
         hiedb == 0.4.2.*,
