--- a/hls-plugin-api/hls-plugin-api.cabal
+++ b/hls-plugin-api/hls-plugin-api.cabal
@@ -20,6 +20,11 @@ flag pedantic
   default:     False
   manual:      True
 
+flag use-fingertree
+  description: Use fingertree implementation of RangeMap
+  default:     True
+  manual:      False
+
 source-repository head
   type:     git
   location: https://github.com/haskell/haskell-language-server
@@ -58,7 +63,6 @@ library
     , transformers
     , unordered-containers
     , megaparsec > 9
-    , hw-fingertree
 
   if os(windows)
     build-depends: Win32
@@ -74,6 +78,10 @@ library
     ghc-options: -Werror
   if impl(ghc >= 9)
     ghc-options: -Wunused-packages
+
+  if flag(use-fingertree)
+    cpp-options: -DUSE_FINGERTREE
+    build-depends: hw-fingertree
 
   default-language:   Haskell2010
   default-extensions:
@@ -100,6 +108,8 @@ test-suite tests
     , containers
 
 benchmark rangemap-benchmark
+  if !flag(use-fingertree)
+    buildable: False
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   bench
