--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -114,6 +114,9 @@ library
       build-depends:
         unix
 
+    if impl(ghc >= 9.4)
+      build:depends: ghc-exactprint >= 1.6.1
+  
     default-extensions:
         BangPatterns
         DeriveFunctor
