--- a/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
+++ b/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
@@ -76,7 +76,6 @@ library
     , transformers
     , unordered-containers
     , containers
-    , ghc-exactprint < 1 || >= 1.4
     , extra
     , retrie
     , syb
@@ -87,6 +86,10 @@ library
     , lens
     , data-default
     , time
+  if impl(ghc < 9.4)
+    build-depends: ghc-exactprint < 1 || >= 1.4
+  if impl(ghc >= 9.4)
+    build-depends: ghc-exactprint >= 1.6.1
   ghc-options: -Wall -Wno-name-shadowing
   default-language: Haskell2010
 
