--- a/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
+++ b/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
@@ -79,6 +79,7 @@ library
     , transformers
     , unordered-containers
     , containers
+    , ghc-exactprint < 1 || >= 1.4
     , extra
     , retrie
     , syb
@@ -89,10 +90,6 @@ library
     , lens
     , data-default
     , time
-  if impl(ghc < 9.4)
-    build-depends: ghc-exactprint < 1 || >= 1.4
-  if impl(ghc >= 9.4)
-    build-depends: ghc-exactprint >= 1.6.1
   ghc-options: -Wall -Wno-name-shadowing
   default-language: Haskell2010
 
