--- a/plugins/hls-cabal-plugin/test/testdata/licenseCodeAction2.cabal
+++ b/plugins/hls-cabal-plugin/test/testdata/licenseCodeAction2.cabal
@@ -1,7 +1,7 @@
 cabal-version:      3.0
 name:               licenseCodeAction2
 version:            0.1.0.0
-license:            apahe
+license:            APAHE
 
 library
     build-depends:    base
