--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -115,7 +115,7 @@ jobs:
         run: |
           echo "TEST_OPTS=-j1 --rerun-update --rerun-filter failures,exceptions" >> $GITHUB_ENV
 
-      - name: Cache test log bewteen attempts of the same run
+      - name: Cache test log between attempts of the same run
         uses: actions/cache@v3
         env:
           cache-name: cache-test-log
