--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: true
+      # when you edit this list of GHC versions,
+      # **don't forget**
+      # to update the ghc versions in 'caching.yml'.
       matrix:
         ghc: [ "9.4.2"
              , "9.4.1"
@@ -66,7 +69,15 @@ jobs:
              ]
         os: [ "ubuntu-latest"
             , "macOS-latest"
+            , "windows-latest"
             ]
+        # don't build these versions
+        # they are broken for good reasons, e.g. compiler is bugged
+        # on that platform.
+        exclude:
+           - os: windows-latest
+             ghc: '9.4.1'
+        # Mark which GHC versions on which platform we want to test.
         include:
            # only test supported ghc major versions
            - os: ubuntu-latest
@@ -93,9 +104,6 @@ jobs:
            - os: windows-latest
              ghc: '8.10.7'
              test: true
-           # only build rest of supported ghc versions for windows
-           - os: windows-latest
-             ghc: '9.2.3'
 
     steps:
       - uses: actions/checkout@v3
