Specify a GHC in pre-commit.yml

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -26,6 +26,8 @@ jobs:
     - uses: actions/checkout@v3
     - uses: ./.github/actions/setup-build
       with:
+        # select a stable GHC version
+        ghc: 9.2.5
         os: ${{ runner.os }}
         shorten-hls: false
 
