--- a/plugins/hls-tactics-plugin/hls-tactics-plugin.cabal
+++ b/plugins/hls-tactics-plugin/hls-tactics-plugin.cabal
@@ -15,6 +15,8 @@ license-file:       LICENSE
 build-type:         Simple
 extra-source-files:
   README.md
+  new/src/**/*.hs-boot
+  old/src/**/*.hs-boot
   new/test/golden/*.cabal
   new/test/golden/*.hs
   new/test/golden/*.yaml
