--- a/plugins/hls-cabal-fmt-plugin/hls-cabal-fmt-plugin.cabal
+++ b/plugins/hls-cabal-fmt-plugin/hls-cabal-fmt-plugin.cabal
@@ -31,8 +31,8 @@ library
     , base            >=4.12 && <5
     , directory
     , filepath
-    , ghcide          ^>=1.7 || ^>=1.8
-    , hls-plugin-api  ^>=1.5
+    , ghcide          ^>= 1.9
+    , hls-plugin-api  ^>= 1.6
     , lens
     , lsp-types
     , process
@@ -53,7 +53,7 @@ test-suite tests
     , directory
     , filepath
     , hls-cabal-fmt-plugin
-    , hls-test-utils        ^>=1.4
+    , hls-test-utils        ^>=1.5
 
   if flag(isolateTests)
     build-tool-depends: cabal-fmt:cabal-fmt ^>=0.1.6
