--- a/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
+++ b/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-fourmolu-plugin
-version:            1.1.0.0
+version:            1.1.1.0
 synopsis:           Integration with the Fourmolu code formatter
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -34,8 +34,8 @@ library
     , fourmolu        ^>=0.3 || ^>=0.4 || ^>= 0.6 || ^>= 0.7 || ^>= 0.8 || ^>= 0.9 || ^>= 0.10
     , ghc
     , ghc-boot-th
-    , ghcide          ^>=1.8
-    , hls-plugin-api  ^>=1.5
+    , ghcide          ^>=1.8 || ^>= 1.9
+    , hls-plugin-api  ^>=1.5 || ^>= 1.6
     , lens
     , lsp
     , process-extras  >= 0.7.1
@@ -61,5 +61,5 @@ test-suite tests
     , filepath
     , hls-fourmolu-plugin
     , hls-plugin-api
-    , hls-test-utils       ^>=1.4
+    , hls-test-utils       ^>=1.5
     , lsp-test
