--- a/plugins/hls-brittany-plugin/hls-brittany-plugin.cabal
+++ b/plugins/hls-brittany-plugin/hls-brittany-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-brittany-plugin
-version:            1.0.2.2
+version:            1.1.0.0
 synopsis:           Integration with the Brittany code formatter
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -33,8 +33,8 @@ library
     , brittany        >=0.13.1.0 && < 0.14.0.1 || > 0.14.0.1
     , filepath
     , ghc-boot-th
-    , ghcide          ^>= 1.6 || ^>= 1.7 || ^>= 1.8
-    , hls-plugin-api  ^>= 1.3 || ^>= 1.4 || ^>= 1.5
+    , ghcide          ^>= 1.6 || ^>= 1.7 || ^>= 1.8 || ^>= 1.9
+    , hls-plugin-api  ^>= 1.3 || ^>= 1.4 || ^>= 1.5 || ^>= 1.6
     , lens
     , lsp-types
     , text
@@ -60,4 +60,4 @@ test-suite tests
     , base
     , filepath
     , hls-brittany-plugin
-    , hls-test-utils        ^>=1.3 || ^>= 1.4
+    , hls-test-utils        ^>=1.5
