--- a/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
+++ b/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
@@ -28,8 +28,8 @@ library
     -- other-extensions:
     build-depends:
       , base                  >=4.12 && <5
-      , ghcide                ^>=1.7 || ^>=1.8
-      , hls-plugin-api        ^>=1.4 || ^>=1.5
+      , ghcide                ^>=1.9
+      , hls-plugin-api        ^>=1.6
       , lsp
       , lens
       , hls-graph
