--- a/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
+++ b/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-floskell-plugin
-version:            1.0.1.2
+version:            1.0.2.0
 synopsis:           Integration with the Floskell code formatter
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -30,8 +30,8 @@ library
   build-depends:
     , base            >=4.12 && <5
     , floskell        ^>=0.10
-    , ghcide          ^>=1.6 || ^>=1.7 || ^>= 1.8
-    , hls-plugin-api  ^>=1.3 || ^>=1.4 || ^>= 1.5
+    , ghcide          ^>=1.6 || ^>=1.7 || ^>= 1.8 || ^>= 1.9
+    , hls-plugin-api  ^>=1.3 || ^>=1.4 || ^>= 1.5 || ^>= 1.6
     , lsp-types       ^>=1.6
     , text
     , transformers
@@ -52,4 +52,4 @@ test-suite tests
     , base
     , filepath
     , hls-floskell-plugin
-    , hls-test-utils       ^>=1.3 || ^>= 1.4
+    , hls-test-utils       ^>=1.5
