--- a/plugins/hls-qualify-imported-names-plugin/hls-qualify-imported-names-plugin.cabal
+++ b/plugins/hls-qualify-imported-names-plugin/hls-qualify-imported-names-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.2
 name:               hls-qualify-imported-names-plugin
-version:            1.0.1.0
+version:            1.0.2.0
 synopsis:           A Haskell Language Server plugin that qualifies imported names
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -30,9 +30,9 @@ library
     , containers
     , deepseq
     , ghc
-    , ghcide                ^>=1.6 || ^>=1.7 || ^>= 1.8
+    , ghcide                ^>=1.6 || ^>=1.7 || ^>= 1.8 || ^>= 1.9
     , hls-graph
-    , hls-plugin-api        ^>=1.3 || ^>=1.4 || ^>= 1.5
+    , hls-plugin-api        ^>=1.3 || ^>=1.4 || ^>= 1.5 || ^>= 1.6
     , lsp
     , text
     , unordered-containers
@@ -55,4 +55,4 @@ test-suite tests
     , text
     , filepath
     , hls-qualify-imported-names-plugin
-    , hls-test-utils             ^>= 1.2 || ^>=1.3 || ^>= 1.4
+    , hls-test-utils             ^>= 1.5
