--- a/plugins/hls-rename-plugin/hls-rename-plugin.cabal
+++ b/plugins/hls-rename-plugin/hls-rename-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-rename-plugin
-version:            1.0.1.0
+version:            1.0.2.0
 synopsis:           Rename plugin for Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -33,10 +33,10 @@ library
     , extra
     , ghc
     , ghc-exactprint
-    , ghcide                ^>=1.8
+    , ghcide                ^>=1.8 || ^>= 1.9
     , hashable
     , hiedb
-    , hls-plugin-api        ^>= 1.3 || ^>=1.4 || ^>= 1.5
+    , hls-plugin-api        ^>= 1.3 || ^>=1.4 || ^>= 1.5 || ^>= 1.6
     , hls-refactor-plugin
     , lsp
     , lsp-types
@@ -65,4 +65,4 @@ test-suite tests
     , filepath
     , hls-plugin-api
     , hls-rename-plugin
-    , hls-test-utils             ^>=1.4
+    , hls-test-utils             ^>=1.5
