--- a/plugins/hls-stylish-haskell-plugin/hls-stylish-haskell-plugin.cabal
+++ b/plugins/hls-stylish-haskell-plugin/hls-stylish-haskell-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-stylish-haskell-plugin
-version:            1.0.1.1
+version:            1.0.1.2
 synopsis:           Integration with the Stylish Haskell code formatter
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -32,8 +32,8 @@ library
     , filepath
     , ghc
     , ghc-boot-th
-    , ghcide           ^>=1.7 || ^>= 1.8
-    , hls-plugin-api   ^>=1.4 || ^>= 1.5
+    , ghcide           ^>=1.7 || ^>= 1.8 || ^>= 1.9
+    , hls-plugin-api   ^>=1.4 || ^>= 1.5 || ^>= 1.6
     , lsp-types
     , stylish-haskell  ^>=0.12 || ^>=0.13 || ^>=0.14.2
     , text
@@ -54,4 +54,4 @@ test-suite tests
     , base
     , filepath
     , hls-stylish-haskell-plugin
-    , hls-test-utils              ^>=1.3 || ^>=1.4
+    , hls-test-utils              ^>=1.5
